force-app/main/default/objects/Voter__c/Voter__c.object-meta.xml
<CustomObject>
    <label>Voter</label>
    <nameField>
        <label>Voter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>