force-app/main/default/objects/Voter__c/fields/Contacted_2016__c.field-meta.xml
<CustomField>
    <fullName>Contacted_2016__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted (2016)</label>
    <type>Checkbox</type>
</CustomField>