force-app/main/default/objects/Voter__c/fields/Political_Party__c.field-meta.xml
<CustomField>
    <fullName>Political_Party__c</fullName>
    <label>Political Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APC</fullName>
            </value>
            <value>
                <fullName>PDP</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Action Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>